# pathfinder-

./: README.md
pathfinder/: CMakeLists.txt  Makefile  pathfinder  test
pathfinder/inc/: pathfinder.h
pathfinder/libmx/inc/: libmx.h
pathfinder/libmx/src/: mx_binary_search.c  mx_bubble_sort.c  mx_count_substr.c  mx_count_words.c  mx_create_node.c  mx_del_extra_spaces.c  mx_del_strarr.c  mx_file_to_str.c  mx_foreach.c  mx_get_char_index.c  mx_get_substr_index.c  mx_hex_to_nbr.c  mx_intlen.c  mx_is_number.c  mx_itoa.c  mx_list_size.c  mx_memccpy.c  mx_memchr.c  mx_memcmp.c  mx_memcpy.c  mx_memmem.c  mx_memmove.c  mx_memrchr.c  mx_memset.c  mx_nbr_to_hex.c  mx_pop_back.c  mx_pop_front.c  mx_pow.c  mx_print_strarr.c  mx_print_unicode.c  mx_printchar.c  mx_printerr.c  mx_printint.c  mx_printstr.c  mx_push_back.c  mx_push_front.c  mx_read_line.c  mx_sort_list.c  mx_space.c  mx_str_reverse.c  (+16 more)
pathfinder/src/: main.c  mx_add_all_from_array.c  mx_append_city_to_arr.c  mx_atoi.c  mx_count_character.c  mx_del_all_numbers_and_com.c  mx_del_dub.c  mx_error_1.c  mx_error_2.c  mx_error_3.c  mx_error_4.c  mx_error_5.c  mx_error_6.c  mx_error_7.c  mx_error_8.c  mx_error_check.c  mx_floydWarshall.c  mx_read_one_line.c  mx_ret_trip_output.c
pathfinder/src/algorithm/: mx_add_all_from_array.c  mx_del_not_alphabet.c  mx_find_all_paths.c  mx_get_distance.c  mx_numbers_only.c  mx_struct_init.c  mx_the_biggest_name.c
pathfinder/src/errors/: mx_error_1.c  mx_error_2.c  mx_error_3.c  mx_error_4.c  mx_error_5.c  mx_error_6.c  mx_error_7.c  mx_error_8.c
pathfinder/src/main/: main.c
pathfinder_clion/: CMakeLists.txt  test.txt
pathfinder_clion/inc/: pathfinder.h
pathfinder_clion/src/: main.c  mx_add_all_from_arr.c  mx_add_all_from_array.c  mx_append_city_to_arr.c  mx_atoi.c  mx_back_path.c  mx_count_character.c  mx_del_all_numbers_and_com.c  mx_del_dub.c  mx_del_not_alphabet.c  mx_error_1.c  mx_error_2.c  mx_error_3.c  mx_error_4.c  mx_error_5.c  mx_error_6.c  mx_error_7.c  mx_error_8.c  mx_error_check.c  mx_floydWarshall.c  mx_get_distance.c  mx_numbers_only.c  mx_read_one_line.c  mx_struct_init.c  mx_the_biggest_name.c
