cmake_minimum_required(VERSION 3.16)
project(pathfinder C)

set(CMAKE_C_STANDARD 11)

include_directories(inc)
include_directories(libmx/inc)

add_executable(pathfinder
        inc/pathfinder.h
        libmx/inc/libmx.h
        libmx/src/mx_binary_search.c
        libmx/src/mx_bubble_sort.c
        libmx/src/mx_count_substr.c
        libmx/src/mx_count_words.c
        libmx/src/mx_create_node.c
        libmx/src/mx_del_extra_spaces.c
        libmx/src/mx_del_strarr.c
        libmx/src/mx_file_to_str.c
        libmx/src/mx_foreach.c
        libmx/src/mx_get_char_index.c
        libmx/src/mx_get_substr_index.c
        libmx/src/mx_hex_to_nbr.c
        libmx/src/mx_in_alphabet.c
        libmx/src/mx_intlen.c
        libmx/src/mx_is_number.c
        libmx/src/mx_itoa.c
        libmx/src/mx_list_size.c
        libmx/src/mx_memccpy.c
        libmx/src/mx_memchr.c
        libmx/src/mx_memcmp.c
        libmx/src/mx_memcpy.c
        libmx/src/mx_memmem.c
        libmx/src/mx_memmove.c
        libmx/src/mx_memrchr.c
        libmx/src/mx_memset.c
        libmx/src/mx_nbr_to_hex.c
        libmx/src/mx_pop_back.c
        libmx/src/mx_pop_front.c
        libmx/src/mx_pow.c
        libmx/src/mx_print_strarr.c
        libmx/src/mx_print_unicode.c
        libmx/src/mx_printchar.c
        libmx/src/mx_printerr.c
        libmx/src/mx_printint.c
        libmx/src/mx_printstr.c
        libmx/src/mx_push_back.c
        libmx/src/mx_push_front.c
        libmx/src/mx_quicksort.c
        libmx/src/mx_read_line.c
        libmx/src/mx_realloc.c
        libmx/src/mx_replace_substr.c
        libmx/src/mx_sort_list.c
        libmx/src/mx_space.c
        libmx/src/mx_sqrt.c
        libmx/src/mx_str_reverse.c
        libmx/src/mx_strcat.c
        libmx/src/mx_strcmp.c
        libmx/src/mx_strcpy.c
        libmx/src/mx_strdel.c
        libmx/src/mx_strdup.c
        libmx/src/mx_strjoin.c
        libmx/src/mx_strlen.c
        libmx/src/mx_strncpy.c
        libmx/src/mx_strndup.c
        libmx/src/mx_strnew.c
        libmx/src/mx_strsplit.c
        libmx/src/mx_strstr.c
        libmx/src/mx_strtrim.c
        libmx/src/mx_swap_char.c
        libmx/src/mx_to_lower.c
        libmx/src/mx_to_upper.c
        src/algorithm/mx_add_all_from_array.c
        src/algorithm/mx_append_city_to_arr.c
        src/algorithm/mx_atoi.c
        src/algorithm/mx_back_path.c
        src/algorithm/mx_count_character.c
        src/algorithm/mx_del_all_numbers_and_com.c
        src/algorithm/mx_del_dub.c
        src/algorithm/mx_del_not_alphabet.c
        src/algorithm/mx_find_all_paths.c
        src/algorithm/mx_floydWarshall.c
        src/algorithm/mx_get_distance.c
        src/algorithm/mx_numbers_only.c
        src/algorithm/mx_read_one_line.c
        src/algorithm/mx_ret_trip_output.c
        src/algorithm/mx_struct_init.c
        src/algorithm/mx_the_biggest_name.c
        src/errors/mx_error_1.c
        src/errors/mx_error_2.c
        src/errors/mx_error_3.c
        src/errors/mx_error_4.c
        src/errors/mx_error_5.c
        src/errors/mx_error_6.c
        src/errors/mx_error_7.c
        src/errors/mx_error_8.c
        src/errors/mx_error_check.c
        src/main/main.c)
